@@ -9,6 +9,9 @@
 
 ## This module implements a simple HTTP-Server.
 ##
+## **Warning**: This module will soon be deprecated in favour of
+## the ``asyncdispatch`` module, you should use it instead.
+##
 ## Example:
 ##
 ## .. code-block:: nim
