@@ -63,8 +63,8 @@ srcdoc2: "deprecated/pure/ftpclient"
 srcdoc2: "pure/asyncfile;pure/asyncftpclient"
 srcdoc2: "pure/md5;pure/rationals"
 srcdoc2: "posix/posix"
-srcdoc2: "pure/fenv"
-srcdoc2: "pure/basic2d;pure/basic3d"
+srcdoc2: "pure/fenv;pure/securehash"
+srcdoc2: "pure/basic2d;pure/basic3d;pure/mersenne;pure/coro"
 
 ; Note: everything under 'webdoc' doesn't get listed in the index, so wrappers
 ; should live here
